--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,86 @@
+@font-face {
+  font-family: "Noto Sans JP";
+  src: url(./assets//fonts/NotoSansJP-VariableFont_wght.ttf);
+}
+@font-face {
+  font-family: "Gabarito";
+  src: url(./assets//fonts/Gabarito-VariableFont_wght.ttf);
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Gabarito";
+}
+
+.card-wrapper {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.card {
+  overflow: hidden;
+  border-top-right-radius: 10%;
+  transition: all 0.3s;
+  position: relative;
+  cursor: pointer;
+  background-color: rgb(49, 49, 202);
+  display: flex;
+  margin-right: -5%;
+}
+.card p {
+  display: none;
+}
+.card:hover {
+  margin-right: 0;
+}
+.card:hover img {
+  filter: none;
+}
+.card:hover p {
+  display: inline-flex;
+  padding: 50px;
+  color: white;
+}
+.card span {
+  position: absolute;
+  bottom: 10px;
+  color: white;
+}
+.card span:first-of-type {
+  left: 10px;
+  bottom: 10px;
+  max-width: 20ch;
+  font-size: 34px;
+  max-width: 10ch;
+}
+.card span:last-of-type {
+  right: 10px;
+  writing-mode: vertical-rl;
+  font-family: "Noto Sans JP";
+  font-weight: bold;
+}
+.card img {
+  clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
+  height: 50vh;
+  filter: grayscale(0.8) opacity(0.7);
+}
+
+@media only screen and (min-device-width: 220px) and (max-device-width: 767px) {
+  .card {
+    width: 100vw;
+    height: 100vh;
+    border-radius: unset;
+  }
+  .card img {
+    height: 100%;
+  }
+  .card span {
+    font-size: 50px;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
