--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
   cursor: pointer;
   background-color: rgb(49, 49, 202);
   display: flex;
-  margin-right: -5%;
+  margin-right: -12%;
 }
 .card p {
   display: none;
@@ -55,16 +55,17 @@ body {
   bottom: 10px;
   max-width: 20ch;
   font-size: 34px;
-  max-width: 10ch;
+  max-width: 5ch;
 }
 .card span:last-of-type {
   right: 10px;
   writing-mode: vertical-rl;
   font-family: "Noto Sans JP";
   font-weight: bold;
+  font-size: 25px;
 }
 .card img {
-  clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 55% 100%, 0% 100%);
   height: 50vh;
   filter: grayscale(0.8) opacity(0.7);
 }
