--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ body {
   background-color: rgb(49, 49, 202);
   display: flex;
   margin : {
-    right: -5%;
+    right: -12%;
   }
   p{
    display: none;
@@ -61,7 +61,7 @@ body {
       font: {
         size: 34px;
       }
-      max-width: 10ch;
+      max-width: 5ch;
     }
 
     &:last-of-type {
@@ -70,6 +70,7 @@ body {
       font:{
          family: 'Noto Sans JP';
          weight: bold;
+         size:25px;
       }
       ;
     }
@@ -79,7 +80,7 @@ body {
   }
 
   img {
-    clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 55% 100%, 0% 100%);
     height: 50vh;
     filter: grayscale(0.8) opacity(0.7);
     
