--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ body {
 }
 .card img {
   clip-path: polygon(0 0, 100% 0, 55% 100%, 0% 100%);
-  height: 50vh;
+  width: 350px;
   filter: grayscale(0.8) opacity(0.7);
 }
 
