--- a/src/UISystem.scss
+++ b/src/UISystem.scss
@@ -7,3 +7,15 @@
     font-family: 'Gabarito';
     src: url(./assets//fonts/Gabarito-VariableFont_wght.ttf);
 }
+
+ // Sizes
+ $xxs: 10px;
+ $xs: 12px;
+ $s: 14px;
+ $m: 16px;
+ $l: 18px;
+ $xl: 21px;
+ $xxl: 24px;
+ $xxl: 36px;
+ $h: 48px;
+ $xh: 72px;
