--- a/src/App.css
+++ b/src/App.css
@@ -19,31 +19,30 @@ body {
 .card-wrapper {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+  padding: 48px calc(5 * 72px);
+  position: relative;
 }
 
 .card {
+  transform: skew(-5deg);
   overflow: hidden;
-  border-top-right-radius: 10%;
   transition: all 0.3s;
   position: relative;
   cursor: pointer;
-  background-color: rgb(49, 49, 202);
+  background-color: rgb(245, 29, 68);
   display: flex;
-  margin-right: -12%;
+  margin-right: -90px;
 }
 .card p {
   display: none;
 }
 .card:hover {
+  animation: flicker 0.5s forwards;
   margin-right: 0;
 }
 .card:hover img {
   filter: none;
-}
-.card:hover p {
-  display: inline-flex;
-  padding: 50px;
-  color: white;
 }
 .card span {
   position: absolute;
@@ -51,36 +50,177 @@ body {
   color: white;
 }
 .card span:first-of-type {
-  left: 10px;
-  bottom: 10px;
+  left: 14px;
+  bottom: 14px;
   max-width: 20ch;
-  font-size: 34px;
+  font-size: 36px;
   max-width: 5ch;
 }
 .card span:last-of-type {
+  top: 10px;
   right: 10px;
   writing-mode: vertical-rl;
   font-family: "Noto Sans JP";
   font-weight: bold;
-  font-size: 25px;
+  font-size: 21px;
 }
 .card img {
-  clip-path: polygon(0 0, 100% 0, 55% 100%, 0% 100%);
+  clip-path: polygon(0 0, 85% 0, 75% 100%, 0% 100%);
   width: 350px;
   filter: grayscale(0.8) opacity(0.7);
 }
 
+h1 {
+  position: absolute;
+  z-index: -1;
+  display: inline-flex;
+  justify-content: center;
+  align-items: baseline;
+  column-gap: 48px;
+  top: 48px;
+  left: 0;
+  font-size: 72px;
+  writing-mode: vertical-rl;
+  text-transform: uppercase;
+}
+h1 span:first-of-type {
+  color: rgb(245, 29, 68);
+  filter: hue-rotate(-90deg);
+}
+h1 span:last-of-type {
+  font-size: 21px;
+}
+h1 span:last-of-type a {
+  color: inherit;
+  text-decoration: none;
+}
+
+@keyframes flicker {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0;
+  }
+  10.1% {
+    opacity: 1;
+  }
+  10.2% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  20.1% {
+    opacity: 1;
+  }
+  20.6% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  30.1% {
+    opacity: 1;
+  }
+  30.5% {
+    opacity: 1;
+  }
+  30.6% {
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  45.1% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  55% {
+    opacity: 1;
+  }
+  55.1% {
+    opacity: 0;
+  }
+  57% {
+    opacity: 0;
+  }
+  57.1% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  60.1% {
+    opacity: 0;
+  }
+  65% {
+    opacity: 0;
+  }
+  65.1% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  75.1% {
+    opacity: 0;
+  }
+  77% {
+    opacity: 0;
+  }
+  77.1% {
+    opacity: 1;
+  }
+  85% {
+    opacity: 1;
+  }
+  85.1% {
+    opacity: 0;
+  }
+  86% {
+    opacity: 0;
+  }
+  86.1% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @media only screen and (min-device-width: 220px) and (max-device-width: 767px) {
+  .card-wrapper {
+    padding: 72px 0;
+    flex-flow: column nowrap;
+    row-gap: 18px;
+  }
   .card {
+    transform: none;
     width: 100vw;
     height: 100vh;
     border-radius: unset;
   }
   .card img {
     height: 100%;
+    clip-path: polygon(0 0, 85% 0, 85% 100%, 0% 100%);
   }
-  .card span {
-    font-size: 50px;
+  .card span:first-of-type {
+    font-size: 36px;
+  }
+  .card span:last-of-type {
+    font-size: 36px;
+  }
+  h1 {
+    position: static;
+    flex-flow: column wrap;
+    align-items: center;
+    row-gap: 16px;
+    writing-mode: horizontal-tb;
+  }
+  h1 span:first-of-type {
+    writing-mode: vertical-rl;
   }
 }
 
