--- a/src/App.scss
+++ b/src/App.scss
@@ -1,91 +1,214 @@
-@import 'UISystem';
+@import "UISystem";
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-
 body {
-  font:{
-   family: 'Gabarito';
+  font: {
+    family: "Gabarito";
   }
 }
-
 
 .card-wrapper {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+  padding: $h calc(5 * #{$xh});
+  position: relative;
 }
 
 .card {
-   overflow: hidden;
-   border-top-right-radius: 10%;
+  transform: skew(-5deg);
+  overflow: hidden;
   transition: all 0.3s;
   position: relative;
   cursor: pointer;
-  background-color: rgb(49, 49, 202);
+  background-color: rgb(245, 29, 68);
   display: flex;
   margin : {
-    right: -12%;
+    right: -90px;
   }
-  p{
-   display: none;
+  p {
+    display: none;
   }
 
   &:hover {
+    animation: flicker 0.5s forwards;
     margin: {
       right: 0;
     }
     img {
       filter: none;
     }
-    p{
-      display: inline-flex;
-      padding: 50px;
-      color:white;
-    }
   }
-  
 
   span {
     position: absolute;
     &:first-of-type {
-      // writing-mode:vertical-lr;
-      
-
-      left: 10px;
-      bottom: 10px;
+      left: $s;
+      bottom: $s;
       max-width: 20ch;
 
       font: {
-        size: 34px;
+        size: $xxl;
       }
       max-width: 5ch;
     }
 
     &:last-of-type {
-      right: 10px;
+      top: $xxs;
+      right: $xxs;
       writing-mode: vertical-rl;
-      font:{
-         family: 'Noto Sans JP';
-         weight: bold;
-         size:25px;
+      font: {
+        family: "Noto Sans JP";
+        weight: bold;
+        size: $xl;
       }
-      ;
     }
-    bottom: 10px;
+    bottom: $xxs;
 
     color: white;
   }
 
   img {
-    clip-path: polygon(0 0, 100% 0, 55% 100%, 0% 100%);
+    clip-path: polygon(0 0, 85% 0, 75% 100%, 0% 100%);
     width: 350px;
     filter: grayscale(0.8) opacity(0.7);
-    
-    ;
   }
 }
 
-@import 'Mobile.scss';
+h1 {
+  position: absolute;
+  z-index: -1;
+  display: inline-flex;
+  justify-content: center;
+  align-items: baseline;
+  column-gap: $h;
+  top: $h;
+  left: 0;
+
+  font: {
+    size: $xh;
+  }
+  writing-mode: vertical-rl;
+  text: {
+    transform: uppercase;
+  }
+
+  span {
+    &:first-of-type {
+    color:  rgb(245, 29, 68);
+      filter: hue-rotate(-90deg);
+    }
+    &:last-of-type{
+      font:{
+        size: $xl;
+      }
+      a{
+        
+        color: inherit;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+@keyframes flicker {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0;
+  }
+  10.1% {
+    opacity: 1;
+  }
+  10.2% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  20.1% {
+    opacity: 1;
+  }
+  20.6% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  30.1% {
+    opacity: 1;
+  }
+  30.5% {
+    opacity: 1;
+  }
+  30.6% {
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  45.1% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  55% {
+    opacity: 1;
+  }
+  55.1% {
+    opacity: 0;
+  }
+  57% {
+    opacity: 0;
+  }
+  57.1% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  60.1% {
+    opacity: 0;
+  }
+  65% {
+    opacity: 0;
+  }
+  65.1% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  75.1% {
+    opacity: 0;
+  }
+  77% {
+    opacity: 0;
+  }
+  77.1% {
+    opacity: 1;
+  }
+  85% {
+    opacity: 1;
+  }
+  85.1% {
+    opacity: 0;
+  }
+  86% {
+    opacity: 0;
+  }
+  86.1% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@import "Mobile.scss";
