add tablet styling

--- a/src/Mobile.scss
+++ b/src/Mobile.scss
@@ -40,3 +40,15 @@
     }
   }
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .card-wrapper {
+        padding: $xh $xh;
+    }
+
+    .card{
+        img{
+            width:250px;
+        }
+    }
+}
