--- a/src/App.css
+++ b/src/App.css
@@ -223,5 +223,13 @@ h1 span:last-of-type a {
     writing-mode: vertical-rl;
   }
 }
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .card-wrapper {
+    padding: 72px 72px;
+  }
+  .card img {
+    width: 250px;
+  }
+}
 
 /*# sourceMappingURL=App.css.map */
