--- a/src/App.css
+++ b/src/App.css
@@ -193,12 +193,14 @@ h1 span:last-of-type a {
   .card-wrapper {
     padding: 72px 0;
     flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
     row-gap: 18px;
   }
   .card {
     transform: none;
-    width: 100vw;
-    height: 100vh;
+    width: 80vw;
+    margin: 0;
     border-radius: unset;
   }
   .card img {
